--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://fedegot.github.io/week6 ",
+  "homepage": "/fetch-a/src",
   "name": "fetch-a",
   "version": "0.1.0",
   "private": true,
